--- a/admin_dashboard.xhtml
+++ b/admin_dashboard.xhtml
@@ -229,33 +229,33 @@
                                         <f:selectItem itemLabel="NID" itemValue="nid"></f:selectItem>
                                         <f:selectItem itemLabel="Passport" itemValue="passport"></f:selectItem>
                                     </p:selectOneRadio>
-                                    <p:inputText required="true" styleClass="form-control" value="#{market.user.nid}" placeholder="National Id / Passport number"/>
+                                    <p:inputText required="true" styleClass="form-control" value="#{market.createUser.nid}" placeholder="National Id / Passport number"/>
                                 </div>
                                 
                                 <div class="form-group">
-                                    <p:inputText required="true" styleClass="form-control" value="#{market.user.firstName}" placeholder="First Name"  type="fname"/>
+                                    <p:inputText required="true" styleClass="form-control" value="#{market.createUser.firstName}" placeholder="First Name"  type="fname"/>
                                 </div>
                                 <div class="form-group">
-                                    <p:inputText required="true" styleClass="form-control" value="#{market.user.lastName}" placeholder="Last name" type="lname"/>
+                                    <p:inputText required="true" styleClass="form-control" value="#{market.createUser.lastName}" placeholder="Last name" type="lname"/>
                                 </div>
                                 <div class="form-group">
-                                    <p:inputText required="true" styleClass="form-control" value="#{market.user.username}"  placeholder="User Name"/>
+                                    <p:inputText required="true" styleClass="form-control" value="#{market.createUser.username}"  placeholder="User Name"/>
                                 </div>
                                 <div class="form-group">
-                                    <p:inputText required="true" styleClass="form-control" value="#{market.user.email}"  placeholder="E-mail"  type="email"/>
+                                    <p:inputText required="true" styleClass="form-control" value="#{market.createUser.email}"  placeholder="E-mail"  type="email"/>
                                 </div>
                                 <div class="form-group">
-                                    <p:inputText required="true" styleClass="form-control" value="#{market.user.password}"  placeholder="Password"  type="password"/>
+                                    <p:inputText required="true" styleClass="form-control" value="#{market.createUser.password}"  placeholder="Password"  type="password"/>
                                 </div>
                                 <div class="form-group">
                                     <p:inputText required="true" styleClass="form-control" value="#{market.confirmPassword}"  placeholder="Confirm Password"  type="password"/>
                                 </div>
 
                                 <div class="form-group">
-                                    <p:inputText required="true" styleClass="form-control" value="#{market.user.phone}"  placeholder="phone number"  type="phone"/>
+                                    <p:inputText required="true" styleClass="form-control" value="#{market.createUser.phone}"  placeholder="phone number"  type="phone"/>
                                 </div>
                                 <div class="form-group">
-                                    <h:selectOneMenu  value="#{market.user.gender}" styleClass="form-control">
+                                    <h:selectOneMenu  value="#{market.createUser.gender}" styleClass="form-control">
                                         <f:selectItem itemLabel="Female" itemValue="Female"/>
                                         <f:selectItem itemLabel="Male" itemValue="Male"/>
                                     </h:selectOneMenu>
