--- a/resetpassword.xhtml
+++ b/resetpassword.xhtml
@@ -114,7 +114,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4">
-                        <p:growl/>
+                        <p:messages/>
                         <div class="panel panel-default">
                             <div class="panel-body">
                                 <div class="text-center">
