--- a/resetpassword.xhtml
+++ b/resetpassword.xhtml
@@ -128,13 +128,13 @@
                                             <div class="form-group">
                                                 <div class="input-group">
                                                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                                                    <p:inputText value="#{market.username}" id="uu" placeholder="Username | TIN" class="form-control"  type="email"/>
+                                                    <p:inputText value="#{market.username}" id="uu" placeholder="Username | TIN" styleClass="form-control"  type="email"/>
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <div class="input-group">
                                                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                                                    <p:inputText value="#{market.email}" id="email" placeholder="email address" class="form-control"  type="email"/>
+                                                    <p:inputText value="#{market.email}" id="email" placeholder="email address" styleClass="form-control"  type="email"/>
                                                 </div>
                                             </div>
                                             <div class="form-group">
