--- a/resetpassword1.xhtml
+++ b/resetpassword1.xhtml
@@ -128,13 +128,13 @@
                                             <div class="form-group">
                                                 <div class="input-group">
                                                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                                                    <p:inputText required="true" requiredMessage="password please" value="#{market.password}" id="uu" placeholder="New Password" class="form-control"  type="email"/>
+                                                    <p:inputText required="true" requiredMessage="password please" value="#{market.password}" id="uu" placeholder="New Password"  styleClass="form-control"  type="email"/>
                                                 </div>
                                             </div>
                                             <div class="form-group">
                                                 <div class="input-group">
                                                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                                                    <p:inputText required="true" requiredMessage="confirm password" value="#{market.confirmPassword}" id="email" placeholder="Confirm password" class="form-control"  type="email"/>
+                                                    <p:inputText required="true" requiredMessage="confirm password" value="#{market.confirmPassword}" id="email" placeholder="Confirm password" styleClass="form-control"  type="email"/>
                                                 </div>
                                             </div>
                                             <div class="form-group">
