--- a/client_my_orders.xhtml
+++ b/client_my_orders.xhtml
@@ -214,7 +214,7 @@
                                         <f:facet name="header">Price</f:facet>
                                             #{product.totalAmount()}
                                         <f:facet name="footer"></f:facet>
-                                        <strong>Total: #{market.totalOnInvoice()}</strong>
+                                        <strong>Total: 200 Rwf</strong>
                                     </h:column>
                                 </h:dataTable>
                             </div>
