--- a/about.xhtml
+++ b/about.xhtml
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Imar Group</title>
@@ -106,8 +107,7 @@
                 background: #f5a004;
                 /* color: snow; */
             }
-
-            .card {
+                        .card {
                 font-size: 1em;
                 overflow: hidden;
                 padding: 0;
@@ -130,102 +130,86 @@
             }
 
 
+
         </style>
     </h:head>
     <body>
-        <section class="header" >
-            <div class="sub-header">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-3"><i class="fa fa-bullhorn" style="float: right; font-size: 28px;"></i></div>
-                        <div class="col-md-6"><marquee>Advertise Your Business at <i class="fa fa-envelope"></i>
-                                imargroup@gmail.com</marquee></div>
-                        <div class="col-md-3"><i class="fa fa-newspaper-o" style="font-size: 26px;"></i></div>
+        <h:form>
+            <section class="header" >
+                <div class="sub-header">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-3"><i class="fa fa-bullhorn" style="float: right; font-size: 28px;"></i></div>
+                            <div class="col-md-6"><marquee>iMAR Online System</marquee></div>
+                            <div class="col-md-3"><i class="fa fa-newspaper-o" style="font-size: 26px;"></i></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="logo-header">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-2"><img style="width: 100px; padding: 27px 0;" src="images/logo.png" alt="logo"/></div>
-                        <div class="col-md-6"><br/>
-                            <div class="search-box col-md-12">               
-                                <h:form>
-                                    <div class="input-group mb-12">
-                                        <div class="input-group-prepend">
-                                            <label class="btn btn-light">Search: </label>
-                                        </div>
-                                        <h:inputText class="form-control" value="#{market.keySearch}"/>
-                                        <div class="input-group-append">
-                                            <h:commandLink action="#{market.indexSearchProducts()}" class="btn btn-success" type="button">Search</h:commandLink>
-                                        </div>
-                                    </div>
-                                </h:form>
+                <div class="logo-header">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-2"><img style="width: 100px; padding: 27px 0;" src="images/logo.png" alt="logo"/></div>
+                            <div class="col-md-6"><br/>
+                                
                             </div>
-                            <br/>
-                        </div>
-                        <div class="col-md-4">
-                            <section class="customer-logos slider">
-                                <div class="slide"><img src="slick-images/slick1.png"/></div>
-                                <div class="slide"><img src="slick-images/slick2.png"/></div>
-                                <div class="slide"><img src="slick-images/slick3.png"/></div>
-                                <div class="slide"><img src="slick-images/slick4.png"/></div>
-                            </section>
+                            <div class="col-md-4">
+                                <section class="customer-logos slider">
+                                    <c:forEach var="item" items="#{advertismentModal.advertisments}">
+                                        <a href="#{item.url}"><div class="slide"><img src="image/#{item.img}"/></div></a>
+                                    </c:forEach>
+                                </section>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <nav class="navbar navbar-expand-sm  navbar-light bg-light">
-                <div class="container">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                <nav class="navbar navbar-expand-sm  navbar-light bg-light">
+                    <div class="container">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
 
-                    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"> <i class="fa fa-home" aria-hidden="true"></i> Home <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
-                            </li>
-                            <li class="nav-item dropdown dmenu">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                                    Our Service
-                                </a>
-                                <div class="dropdown-menu sm-menu">
-                                    <a class="dropdown-item" href="#">service2</a>
-                                    <a class="dropdown-item" href="#">service 2</a>
-                                    <a class="dropdown-item" href="#">service 3</a>
-                                    <a class="dropdown-item" href="#">service 4</a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contact Us</a>
-                            </li>
-                        </ul>
-                        <div class="social-part">
+                        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#"> <i class="fa fa-home" aria-hidden="true"></i> Home <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">About</a>
+                                </li>
                                 <li class="nav-item dropdown dmenu">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                                        <i class="fa fa-user" aria-hidden="true"></i>Sign up
+                                        Our Service
                                     </a>
                                     <div class="dropdown-menu sm-menu">
-                                        <a class="dropdown-item" href="client_new_account.xhtml"><i class="fa fa-plus" aria-hidden="true"></i> New account</a>
-                                        <a class="dropdown-item" href="login.xhtml"> <i class="fa fa-sign-in" aria-hidden="true"></i>Sign in</a>
+                                        <a class="dropdown-item" href="#">service2</a>
+                                        <a class="dropdown-item" href="#">service 2</a>
+                                        <a class="dropdown-item" href="#">service 3</a>
+                                        <a class="dropdown-item" href="#">service 4</a>
                                     </div>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/contact.xhtml">Contact Us</a>
+                                </li>
                             </ul>
+                            <div class="social-part">
+                                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                                    <li class="nav-item dropdown dmenu">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                                            <i class="fa fa-user" aria-hidden="true"></i>Sign up
+                                        </a>
+                                        <div class="dropdown-menu sm-menu">
+                                            <a class="dropdown-item" href="client_new_account.xhtml"><i class="fa fa-plus" aria-hidden="true"></i> New account</a>
+                                            <a class="dropdown-item" href="login.xhtml"> <i class="fa fa-sign-in" aria-hidden="true"></i>Sign in</a>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </nav>
-        </section>
-        <section class="main-section">
-
-        </section>
-
-        <section id="productsId">
+                </nav>
+            </section>
+        </h:form>
+          <section id="productsId">
             <div class="container">
                 <br/>
                 <div class="row">
@@ -289,7 +273,5 @@
             </div>
         </div>
         <!--Bottom Footer-->
-
-
     </body>
 </html>
