correction on about us 14.03

--- a/about.xhtml
+++ b/about.xhtml
@@ -171,21 +171,21 @@
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"> <i class="fa fa-home" aria-hidden="true"></i> Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="index.xhtml"> <i class="fa fa-home" aria-hidden="true"></i> Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">About</a>
+                                    <a class="nav-link" href="about.xhtml">About</a>
                                 </li>
                                 <li class="nav-item dropdown dmenu">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                                         Our Service
                                     </a>
-                                    <div class="dropdown-menu sm-menu">
+                                    <!-- <div class="dropdown-menu sm-menu">
                                         <a class="dropdown-item" href="#">service2</a>
                                         <a class="dropdown-item" href="#">service 2</a>
                                         <a class="dropdown-item" href="#">service 3</a>
                                         <a class="dropdown-item" href="#">service 4</a>
-                                    </div>
+                                    </div> -->
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/contact.xhtml">Contact Us</a>
