--- a/contact.xhtml
+++ b/contact.xhtml
@@ -4,134 +4,260 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Kigali trader</title>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-        <style>
-            .upper{
-                background: #165729;
-                width: 90%;
-                margin: 0 auto;
-                height: 40px;
-                color: #fff;
-            }
-            .upper .first{
-                float: left;
-                margin-left: -40px;
-            }
-            .upper .second{
-                float: right;
-            }
-            ul li{
-                display: inline;
-                margin: 10px;
-            }
-            .middle{
+        <title>Imar Group</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!--&lt;link rel=&quot;stylesheet&quot; href=&quot;https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css&quot;/&gt;-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet"/>    
+        <link rel="stylesheet" href="css/10062020.css"/>
+        <link rel="stylesheet" href="css/10062020_slick.css"/>
 
-                width: 90%;
-                margin: 0 auto;
-                height: 90px;
-                color: #fff;
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+        <!--This is for advertisement ads-->
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+        <script src="js/custom.js"></script>
+        <style>
+            .main-section{
+                width: 98%;
             }
-            .down{
-                background: #ffd10e;
-                width: 90%;
-                margin: 0 auto;
-                height: 40px;
-                color: #fff;
+            .btn-success {
+                color: #f9ebb1;
+                background-color: #1e435e;
+                border-color: #1e435e;
+                letter-spacing: 3px;
+                font-size: 12px;
+                border-radius: 0;
+                padding: 12px 15px;
             }
-            a{
-                color: inherit;
-                text-decoration: none;
-                line-height: inherit;
-                cursor: pointer;
+
+            .form-control {
+                background-clip: padding-box;
+                border: 1px solid #f2f3f2;
             }
-            .container1{
-                background: #ddd;
-                width:  90%;
-                margin: 0 auto;
-                height: 500px;
+            a:hover {
+                color: #dc9902;
+                text-decoration: none!important;
+                background-color: transparent;
+                -webkit-text-decoration-skip: objects;
             }
-            .advert_container {
-                padding-top: 4%;
-                width: 90%;
-                margin: auto;
-                margin-top: 4px;
-                display: flex;
+            .img-fluid {
+                width: 95%;
+                height: 155px;
             }
-            .card {
-                width: 20%;
-                flex: 1;
-                margin: 1%;
+            li{
+                border-bottom: solid 1px #e9ecef;
             }
+
+            .single {
+                padding: 20px 15px;
+                margin-top: 25px;
+                background: #fcfcfc;
+                border: 1px solid #f0f0f0;
+            }
+            .single h3.side-title {
+                margin: 0;
+                margin-bottom: 10px;
+                padding: 0;
+                font-size: 20px;
+                color: #333;
+                text-transform: uppercase; }
+            .single h3.side-title:after {
+                content: '';
+                width: 60px;
+                height: 1px;
+                background: #ff173c;
+                display: block;
+                margin-top: 6px; }
+
+            .single ul {
+                margin-bottom: 0; }
+            .single li a {
+                color: #666;
+                font-size: 14px;
+                text-transform: uppercase;
+                border-bottom: 1px solid #f0f0f0;
+                line-height: 40px;
+                display: block;
+                text-decoration: none; }
+            .single li a:hover {
+                color: #ff173c; }
+            .single li:last-child a {
+                border-bottom: 0; }
+            #h3, .h3 {
+                font-size: 1.4rem;
+                font-weight: 700;
+                margin: 45px 0 48px 0;
+                letter-spacing: 5px;
+                color: #1e435e;
+                text-shadow: 2px 0px 5px #1e435e;
+            }
+
+            a:hover{
+                text-decoration:none;
+            }
+            .navbar-expand-sm .navbar-nav .dropdown-menu {
+                position: absolute;
+                margin: 10px 0;
+                background: #f5a004;
+                /* color: snow; */
+            }
+                        .card {
+                font-size: 1em;
+                overflow: hidden;
+                padding: 0;
+                border: none;
+                border-radius: .28571429rem;
+                box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
+                margin: 15px 0 0 0;
+            }
+
+            .card-block {
+                position: relative;
+                margin: 0;
+                padding: 3em;
+                border: none;
+                border-top: 1px solid rgba(34, 36, 38, .1);
+                box-shadow: none;
+                font-size: 17px;
+                letter-spacing: 2px;
+                word-spacing: 8px;
+            }
+
+
+
         </style>
     </h:head>
     <body>
-        <div>
-            <div class="heade">
-                <div class="upper">
-                    <div style="width: 76%; margin: 0 auto;">
-                        <ul class="first">
-                            <li>0788335917</li>
-                            <li>0785498236</li>
-                        </ul>
-                        <ul class="second">
-                            <li>Currency USD</li>
-                            <li>English</li>
-                            <li>My Account</li>
-                            <li>Vendors</li>
-                            <li>Affliates Area</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="middle">
-                    <div style="width: 76%; margin: 0 auto;">
-                        <div class="one" style="float:left">
-                            <img src="img/logo.PNG"/>
-                        </div>
-                        <div class="two" style="float: right; margin-top: 10px">
-<!--                            <input type="text"/>
-                            <input type="text"/>-->
+        <h:form>
+            <section class="header" >
+                <div class="sub-header">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-3"><i class="fa fa-bullhorn" style="float: right; font-size: 28px;"></i></div>
+                            <div class="col-md-6"><marquee>iMAR Online System</marquee></div>
+                            <div class="col-md-3"><i class="fa fa-newspaper-o" style="font-size: 26px;"></i></div>
                         </div>
                     </div>
+                </div>
+                <div class="logo-header">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-2"><img style="width: 100px; padding: 27px 0;" src="images/logo.png" alt="logo"/></div>
+                            <div class="col-md-6"><br/>
+                                
+                            </div>
+                            <div class="col-md-4">
+                                <section class="customer-logos slider">
+                                    <c:forEach var="item" items="#{advertismentModal.advertisments}">
+                                        <a href="#{item.url}"><div class="slide"><img src="image/#{item.img}"/></div></a>
+                                    </c:forEach>
+                                </section>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <nav class="navbar navbar-expand-sm  navbar-light bg-light">
+                    <div class="container">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
 
-                </div>
-                <div class="down">
-                    <ul  style="margin-left: 8%"> 
-                        <li><a href="index.xhtml"> Home</a></li>
-                        <li><a href="login.xhtml"> Login</a></li>
-                        <li><a href="#"> About Us</a></li>
-                        <li><a href="login.xhtml"> Login</a></li>
-                        <li><a href="client_new_account.xhtml"> Sign Up</a></li>
-                    </ul>
-                </div>
-            </div>
+                        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.xhtml"> <i class="fa fa-home" aria-hidden="true"></i> Home <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/about.xhtml">About</a>
+                                </li>
+                                <li class="nav-item dropdown dmenu">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                                        Our Service
+                                    </a>
+                                    <!-- <div class="dropdown-menu sm-menu">
+                                        <a class="dropdown-item" href="#">service2</a>
+                                        <a class="dropdown-item" href="#">service 2</a>
+                                        <a class="dropdown-item" href="#">service 3</a>
+                                        <a class="dropdown-item" href="#">service 4</a>
+                                    </div> -->
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/contact.xhtml">Contact Us</a>
+                                </li>
+                            </ul>
+                            <div class="social-part">
+                                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                                    <li class="nav-item dropdown dmenu">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                                            <i class="fa fa-user" aria-hidden="true"></i>Sign up
+                                        </a>
+                                        <div class="dropdown-menu sm-menu">
+                                            <a class="dropdown-item" href="client_new_account.xhtml"><i class="fa fa-plus" aria-hidden="true"></i> New account</a>
+                                            <a class="dropdown-item" href="login.xhtml"> <i class="fa fa-sign-in" aria-hidden="true"></i>Sign in</a>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </section>
+        </h:form>
+          <section id="productsId">
+            <div class="container">
+                <br/>
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-7">
+                        <div class="card">
+                            <div class="card-block">
+                                <h4 class="card-title">CONTACT US</h4>
 
-            <div class="container1" style="background: #ddd">
-                <div style="height: 460px; width: 78%; margin: 0 auto;">
-                    <img src="img/bg_yirangarama2.jpg" style="height: 100%; background: rgba(200,200,200,0.3); width: 100%"/>
-                </div>
-                <p:dataGrid value="#{market.getProductsToAdvertises()}" var="product" columns="3">
-                    <p:column>
-                        <div class="advert_container">
-                            <div class="card">
-                                <!--<img src="img/u7.jpg" class="card-img-top" alt="..."/>-->
-                                <img src="img/#{product.image}" class="card-img-top"/>
-                                <div class="card-body">
-                                    <h5 styleClass="card-title">#{product.name}</h5>
-                                    <p styleClass="card-text">#{product.description}</p>
-                                    <p styleClass="card-text">#{product.price}</p>
-                                    <a href="#" class="btn btn-primary">Shop Now</a>
+                                <div class="card-text text-left">
+                                    Pascal KABAGEMA <br/>
+                                    CEO<br/>
+                                    TEL:0788319046<br/>
+                                    Email:imargroup10@gmail.com<br/><br/>
+
+                                    Matthew MUTABAZI<br/>
+                                    ADMINISTRATOR<br/>
+                                    Tel:0788350281<br/>
+                                    Email:imargroup10@gmail.com<br/><br/>
+
+                                    Heritier NTAGANIRA<br/>
+                                    SOFTWARE DEVELOPER<br/>
+                                    Tel:0788350287<br/>
+                                    Email:imargroup10@gmail.com<br/><br/>
+
                                 </div>
                             </div>
                         </div>
-                    </p:column>
-                </p:dataGrid>
+                    </div>
 
+                </div>
+            </div>
+        </section>
+        <!--Bottom Footer-->
+        <div class="imigongo">
+            <img src="" alt=""/>
+        </div>
+        <div class="bottom section-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <div class="copyright">
+                            <p>© <span>2020</span> <a href="#" class="transition">IMAR | Group</a> All rights reserved.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+        <!--Bottom Footer-->
     </body>
 </html>
